fix scss rules for ms edge visibility icon

--- a/src/components/FormElements/FormPasswordField/styles.module.scss
+++ b/src/components/FormElements/FormPasswordField/styles.module.scss
@@ -22,7 +22,8 @@
   &:disabled {
     background-color: $grey-bg !important;
   }
-  ::-ms-reveal {
+
+  &::-ms-reveal {
     display: none;
   }
 }
